--- a/RecipeProjectMVC/Views/Home/Index.cshtml
+++ b/RecipeProjectMVC/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                             <!-- Text -->
                             <p class="card-text">That's one tastey dish!</p>
                             <!-- Button -->
-                            <a href="#" class="btn btn-primary">Button</a>
+                            <a asp-controller="Home" asp-action="Details" asp-route-id ="@item.Id" class="btn btn-primary float-left my-2">Details</a>
 
                         </div>
                         </div>
