--- a/RecipeProjectMVC/Views/_ViewImports.cshtml
+++ b/RecipeProjectMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using RecipeProjectMVC.Models.Entities;
 @using RecipeProjectMVC.ViewModels;
+@using RecipeProjectMVC.DTO;
