--- a/RecipeProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeProjectMVC/Views/Shared/_Layout.cshtml
@@ -61,6 +61,9 @@
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 </div>
             </form>
+            <div>
+                <input type="text" class="typeahead" data-provide="typeahead">
+            </div>
         </div>
         <!-- Collapsible content -->
 
