--- a/RecipeProjectMVC/Views/Home/Index.cshtml
+++ b/RecipeProjectMVC/Views/Home/Index.cshtml
@@ -10,15 +10,18 @@
         {
             <div class="col-lg-3 col-md-12 mb-4 d-flex align-items-stretch">
                 <!-- Card -->
-                <div class="card hoverable wow zoomInRight">
+                <div class="card hoverable wow zoomIn">
 
                     <!-- Card image -->
+
                     <div class="view overlay zoom">
                         <img class="card-img-top" src="@item.Image" alt="Card image cap">
-                        <a href="#!">
+
+                        <a asp-controller="Home" asp-action="Details" asp-route-id="@item.Id">
                             <div class="mask rgba-white-slight"></div>
                         </a>
                     </div>
+
                     <div class="p-3 d-flex">
                         <!-- Card content -->
                         <div class="card-body">
@@ -26,15 +29,17 @@
                             <!-- Title -->
                             <h4 class="card-title">@item.Label</h4>
                             <!-- Text -->
-                            <p class="card-text">That's one tastey dish!</p>
+                            <p class="card-text">
+                              That's one tastey dish!
+                            </p>
                             <!-- Button -->
-                            <a asp-controller="Home" asp-action="Details" asp-route-id ="@item.Id" class="btn btn-primary float-left my-2">Details</a>
+                            <a asp-controller="Home" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary float-left my-2">Details</a>
 
                         </div>
-                        </div>
                     </div>
-                    <!-- Card -->
                 </div>
+                <!-- Card -->
+            </div>
         }
     </div>
 </div>
