--- a/RecipeProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeProjectMVC/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#"><i class="fa fa-bar-chart-o" aria-hidden="true"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Pricing</a>
