Done with Statistics main page

--- a/RecipeProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeProjectMVC/Views/Shared/_Layout.cshtml
@@ -30,13 +30,13 @@
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="/Home/Index">
                         Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-bar-chart-o" aria-hidden="true"></i></a>
+                    <a class="nav-link" href="/Statistics/Index"><i class="fa fa-bar-chart-o" aria-hidden="true"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Pricing</a>
@@ -82,5 +82,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/js/mdb.min.js"></script>
     <!-- My Scripts -->
     <script type="text/javascript" src="~/scripts/Animations.js"></script>
+    <script type="text/javascript" src="~/scripts/TopProtein.js"></script>
+    <script type="text/javascript" src="~/scripts/TopCarbsChart.js"></script>
+    <script type="text/javascript" src="~/scripts/TopFatChart.js"></script>
+    <script type="text/javascript" src="~/scripts/TopCaloriesChart.js"></script>
+    <script type="text/javascript" src="~/scripts/TopVitaminCChart.js"></script>
+    <script type="text/javascript" src="~/scripts/TopCholesterolChart.js"></script>
+    <script type="text/javascript" src="~/scripts/LowCholesterolChart.js"></script>
+    <script type="text/javascript" src="~/scripts/LowSodiumChart.js"></script>
 </body>
 </html>
