--- a/RecipeProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeProjectMVC/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="/Statistics/Index"><i class="fa fa-bar-chart-o" aria-hidden="true"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="/Diet/Index">Diets</a>
                 </li>
 
                 <!-- Dropdown -->
@@ -90,5 +90,8 @@
     <script type="text/javascript" src="~/scripts/TopCholesterolChart.js"></script>
     <script type="text/javascript" src="~/scripts/LowCholesterolChart.js"></script>
     <script type="text/javascript" src="~/scripts/LowSodiumChart.js"></script>
+    <script type="text/javascript" src="~/scripts/DetailsPieChart.js"></script>
+    <script type="text/javascript" src="~/scripts/LCHFLineChart.js"></script>
+    <script type="text/javascript" src="~/scripts/HighProteinLowCarbChart.js"></script>
 </body>
 </html>
