--- a/RecipeProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeProjectMVC/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
-﻿<!DOCTYPE html>
-
+﻿@using Microsoft.AspNetCore.Identity;
+<!DOCTYPE html>
+@inject SignInManager<IdentityUser> SignInManager
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -52,7 +53,22 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
-
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <form asp-area="" asp-controller="Account" asp-action="Logout" id="logoutForm" method="post" class="navbar-right">
+                          
+                        <li class="nav-item">
+                            <a class ="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+                        </li>
+                    </form>
+                }
+                else
+                {
+                    <il class="nav-item">
+                        <!-- <li><a id="registerLink" asp-controller="Account" asp-action="Register">Register</a></li> -->
+                        <li><a id="loginLink" class="nav-link" asp-controller="Account" asp-action="Login">Log in</a></li>
+                    </il>
+                }
             </ul>
             <!-- Links -->
 
