changed some CSS

--- a/RecipeProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeProjectMVC/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="/Home/Index">
+                        <i class="fas fa-carrot"></i>
                         Home
                         <span class="sr-only">(current)</span>
                     </a>
