--- a/RecipeProjectMVC/Views/Diet/Index.cshtml
+++ b/RecipeProjectMVC/Views/Diet/Index.cshtml
@@ -29,7 +29,7 @@
         </div>
     </div>
 </div>
-<div class="row" style="margin-top: 15px; margin-left: 15px" ">
+<div class="row" style="margin-top: 30px; margin-left: 15px">
     <div class="col-sm-8" style="max-width: 1100px;">
         <div class="card">
             <div class="card-body">
@@ -40,7 +40,7 @@
     </div>
     <div class="col-sm-4">
 
-        <div class="card">
+        <div class="card" >
             <div class="card-body">
 
                 <h3>High Protein Low Carb Recipes</h3>
