--- a/RecipeProjectMVC/Views/Statistics/Index.cshtml
+++ b/RecipeProjectMVC/Views/Statistics/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>Statistics</h1>
 <div style="margin-top: 50px;">
     <div class="class=" col- col-sm-6 col-lg-8"">
-        <div class="row wow bounceInRight">
+        <div class="row">
 
             <div class="col-6 col-md-4">
                 <canvas id="topCaloriesChart" style="max-width: 800px;"></canvas>
@@ -40,7 +40,7 @@
                 }
             </div>
         </div>
-        <div class="row wow bounceInLeft">
+        <div class="row ">
             <div class="col-8 col-md-4">
                 <canvas id="topProtein" style="max-width: 800px;"></canvas>
             </div>
@@ -80,7 +80,7 @@
                 }
             </div>
         </div>
-        <div class="row wow bounceInRight">
+        <div class="row ">
             <div class="col-8 col-md-4">
                 <canvas id="topCarbsChart" style="max-width: 800px;"></canvas>
             </div>
@@ -119,7 +119,7 @@
                 }
             </div>
         </div>
-        <div class="row wow bounceInLeft">
+        <div class="row ">
             <div class="col-8 col-md-4">
                 <canvas id="topFatChart" style="max-width: 800px;"></canvas>
             </div>
