fixed Adrian View

--- a/RecipeProjectMVC/Views/Home/Details.cshtml
+++ b/RecipeProjectMVC/Views/Home/Details.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Details";
 }
-<input type="hidden" value='@ViewContext.RouteData.Values["id"]' id="routeDataId"  />
+<input type="hidden" value='@ViewContext.RouteData.Values["id"]' id="routeDataId" />
 <h1>Details</h1>
 
 <div class="container wow bounceInLeft card" style="margin-top: 50px;">
@@ -67,3 +67,4 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="~/scripts/DetailsPieChart.js"></script>
