--- a/RecipeProjectMVC/Views/Statistics/Index.cshtml
+++ b/RecipeProjectMVC/Views/Statistics/Index.cshtml
@@ -161,5 +161,13 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="~/scripts/TopProtein.js"></script>
+<script type="text/javascript" src="~/scripts/TopCarbsChart.js"></script>
+<script type="text/javascript" src="~/scripts/TopFatChart.js"></script>
+<script type="text/javascript" src="~/scripts/TopCaloriesChart.js"></script>
+<script type="text/javascript" src="~/scripts/TopVitaminCChart.js"></script>
+<script type="text/javascript" src="~/scripts/TopCholesterolChart.js"></script>
+<script type="text/javascript" src="~/scripts/LowCholesterolChart.js"></script>
+<script type="text/javascript" src="~/scripts/LowSodiumChart.js"></script>
 
 
