--- a/RecipeProjectMVC/Views/Diet/Index.cshtml
+++ b/RecipeProjectMVC/Views/Diet/Index.cshtml
@@ -40,7 +40,7 @@
     </div>
     <div class="col-sm-4">
 
-        <div class="card" >
+        <div class="card">
             <div class="card-body">
 
                 <h3>High Protein Low Carb Recipes</h3>
@@ -55,3 +55,5 @@
 
     </div>
 </div>
+<script type="text/javascript" src="~/scripts/LCHFLineChart.js"></script>
+<script type="text/javascript" src="~/scripts/HighProteinLowCarbChart.js"></script>
