--- a/RecipeProjectMVC/Views/Order/AdrianView.cshtml
+++ b/RecipeProjectMVC/Views/Order/AdrianView.cshtml
@@ -9,8 +9,41 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>AdrianView</title>
+    <!-- Font Awesome -->
+    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">*@
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="~/css/mdb.min.css" rel="stylesheet">
 </head>
-<body>
-    <h3>NO !</h3>
+<body class="grey lighten-3">
+    
+
+    <div class="container" style="margin-top:50px;">
+        <div id="Lukas" class="wow bounceInLeft">
+        <img src="~/Photos/Lukas2.jpg"  style="max-width:500px;" class="rounded-circle img-fluid float-right" />
+        <h1 class="col-lg-8 float-right" style="margin-top: 20px;">NEJ ADRIAN! ...INTE IDAG</h1>
+            </div>
+    </div>
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/js/mdb.min.js"></script>
+    <script type="text/javascript">
+        new WOW().init();
+
+        setTimeout(function () {
+            window.location.href = 'http://www.kolmarden.com/';
+        }, 2000);
+        
+
+    </script>
 </body>
 </html>
