--- a/RecipeProjectMVC/Views/Home/Details.cshtml
+++ b/RecipeProjectMVC/Views/Home/Details.cshtml
@@ -67,4 +67,5 @@
         </div>
     </div>
 </div>
+<partial name="_Footer" />
 <script type="text/javascript" src="~/scripts/DetailsPieChart.js"></script>
