--- a/RecipeProjectMVC/Views/Statistics/Index.cshtml
+++ b/RecipeProjectMVC/Views/Statistics/Index.cshtml
@@ -161,6 +161,7 @@
         </div>
     </div>
 </div>
+<partial name="_Footer" />
 <script type="text/javascript" src="~/scripts/TopProtein.js"></script>
 <script type="text/javascript" src="~/scripts/TopCarbsChart.js"></script>
 <script type="text/javascript" src="~/scripts/TopFatChart.js"></script>
