--- a/RecipeProjectMVC/Views/Diet/Index.cshtml
+++ b/RecipeProjectMVC/Views/Diet/Index.cshtml
@@ -55,5 +55,6 @@
 
     </div>
 </div>
+<partial name="_Footer" />
 <script type="text/javascript" src="~/scripts/LCHFLineChart.js"></script>
 <script type="text/javascript" src="~/scripts/HighProteinLowCarbChart.js"></script>
